<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyUtilities</string>
    <string name="go_login">Login</string>
    <string name="go_reg" tools:ignore="StringEscaping">Don\'t have an account ? Sign Up!</string>
    <string name="go_sign_up">Sign Up</string>
    <string name="go_log">Already have account?</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="log_off_user">Log off</string>
    <string name="go_electricity">Electricity</string>
    <string name="first_reading_day_hours">First Reading Day</string>
    <string name="last_reading_day_hours">Last Reading Day</string>
    <string name="first_reading_night_hours">First Reading Night</string>
    <string name="last_reading_night_hours">Last Reading Night</string>
    <string name="bill_number">Bill ID</string>
    <string name="count_electricity">Count</string>
    <string name="save_electricity">Save</string>
    <string name="show_date">Date</string>
    <string name="go_gas">Gas</string>
    <string name="gas_first_reading">First Reading</string>
    <string name="gas_second_reading">Second Reading</string>
    <string name="tariff_model">Tariff Model</string>
    <string name="gas_company">Company</string>
    <string name="go_water">Water</string>
    <string name="count_gas">Count</string>
    <string name="save_gas">Save</string>
    <string name="water_first_reading">First Reading</string>
    <string name="water_last_reading">Last Reading</string>
    <string name="count_water">Count</string>
    <string name="save_water">Save</string>
    <string name="show_utilities">Show</string>
    <string name="go_all_utilities">All Utilities</string>
    <string name="delete_utilities">Delete</string>
    <string name="company_name">Company Name</string>
    <string name="price">Price</string>
    <string name="utility">Utility</string>
    <string name="go_other">Other Utilities</string>


    <string name="rc_bill_id">Bill ID:</string>
    <string name="rc_date">Date:</string>
    <string name="rc_company">Company:</string>
    <string name="rc_tm">Tariff Model:</string>
    <string name="rc_price">Price:</string>
    <string name="rc_bill_id_delete">Enter Bill Number</string>


    <string name="show_electricity">Show saved electricity</string>
    <string name="show_gas">Show saved gas</string>
    <string name="show_water">Show saved water</string>
    <string name="show_other">Show saved other utilities</string>


    <string-array name="tariff_models">
        <item tools:ignore="Typos">TM1</item>
        <item>TM2</item>
        <item>TM3</item>
        <item>TM4</item>
        <item>TM5</item>
        <item>TM6</item>
        <item>TM7</item>
        <item>TM8</item>
        <item>TM9</item>
        <item>TM10</item>
        <item tools:ignore="Typos">TM11</item>
        <item>TM12</item>
    </string-array>
    <string-array name="gas_company">
        <item> PPD </item>
        <item> PIS </item>
    </string-array>
    <string-array name="water_company">
        <item> Vodovod - Osijek d.o.o </item>
        <item> Vodovod i Kanalizacija d.o.o Rijeka </item>
        <item> Vodoopskrba i odvodnja d.o.o Zagreb </item>
    </string-array>

    <string-array name="utility">
        <item> Mobilna pretplata </item>
        <item> Komunalne usluge </item>
        <item> Fiksna mreza/Internet </item>
    </string-array>


</resources>