<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginUser"
    android:background="@drawable/bgimgapp"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/txtSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sign_up_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:background="@drawable/input_fields"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:typeface="monospace"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/txtSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sign_up_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints=""
        android:background="@drawable/input_fields"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/input_fields"
        android:textColor="#83FFFFFF"
        android:layout_marginHorizontal="20dp"
        android:typeface="monospace"
        android:layout_gravity="right"
        />

    <TextView
        android:id="@+id/txtHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_log"
        android:layout_marginHorizontal="20dp"
        android:textColor="#83FFFFFF"
        android:typeface="monospace"
        android:layout_marginTop="20dp"
        />

</LinearLayout>