<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginUser"
    android:background="@drawable/bgimgapp"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/txtLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/input_fields"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="#757575"
        android:typeface="monospace"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:background="@drawable/input_fields"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="#757575"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/input_fields"
            android:textColor="#83FFFFFF"
            android:layout_marginHorizontal="20dp"
            android:typeface="monospace"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txtDontHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/go_reg"
        android:textColor="#83FFFFFF"
        android:typeface="monospace"
        tools:ignore="TextContrastCheck" />

</LinearLayout>